@@ -2,6 +2,15 @@
 
         Reviewed by Eric Seidel.
 
+        WidgetQt.cpp has coding-style errors
+        https://bugs.webkit.org/show_bug.cgi?id=39759
+
+        * platform/qt/WidgetQt.cpp:
+
+2010-06-04  Anders Bakken  <agbakken@gmail.com>
+
+        Reviewed by Eric Seidel.
+
         TemporaryLinkStubsQt.cpp has coding-style errors
         https://bugs.webkit.org/show_bug.cgi?id=39761
 
